--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ keywords:
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: favicon-noun-time-series-995090.svg # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
-url: https://neurips-time-series-workshop.github.io/ # the base hostname & protocol for your site
+url: https://tsalm-workshop.github.io/ # the base hostname & protocol for your site
 baseurl: # the subpath of your site, e.g. /blog/. Leave blank for root
 last_updated: true # set to true if you want to display last updated in the footer
 impressum_path: # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
@@ -112,7 +112,7 @@ youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 zotero_username: # your zotero username
 
 contact_note: >
-  You can reach the organizers of the workshop at <a href="mailto:neurips-time-series-workshop@googlegroups.com">neurips-time-series-workshop@googlegroups.com</a>.
+  You can reach the organizers of the workshop at <a href="mailto:iclr-2026-tsalm-workshop-organizers@googlegroups.com">iclr-2026-tsalm-workshop-organizers@googlegroups.com</a>.
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
